[Media, Controls] Use a weak ref to the listener from callback.

Seems like holding a strong reference causes the leakage.

BUG=717094
TEST=run the failing tests locally with --enable-leak-detection
TBR=haraken
NOTREECHECKS=true
NOTRY=true

Review-Url: https://codereview.chromium.org/2848363002
Cr-Commit-Position: refs/heads/master@{#468525}

Former-commit-id: 27e76cce52a397ea93c9bcf38454c2b4013b7db9